--- a/重构.md
+++ b/重构.md
@@ -6,3 +6,10 @@ npm init vue@latest
 npm install unplugin-vue-components -D
 npm i vant
 npm install element-plus --save
+
+
+#2023/02/22
+ 
+
+ - postcss
+ - postcss添加cssnano插件
