--- a/docs/src/daily/2023-04-17.md
+++ b/docs/src/daily/2023-04-17.md
@@ -1,10 +1,15 @@
 ### 每日一问🤔️
 
 vue3 vite项目实现自动化ui测试
+
 1、使用Cypress实现自动化UI测试，Cypress是一款功能强大的自动化测试框架，可以用来进行自动化UI测试。
-2、安装cypress，在package.json中添加cypress依赖： "devDependencies": { "cypress": "^4.12.1" } 
+
+2、安装cypress，在package.json中添加cypress依赖：` "devDependencies": { "cypress": "^4.12.1" } `
+
 3、在项目根目录下运行`npx cypress open`命令，即可打开cypress的测试界面。 
+
 4、在cypress的测试界面中，创建一个新的测试文件，输入需要测试的内容，然后运行测试。 
+
 5、如果测试成功，则可以看到测试结果，如果测试失败，则可以查看失败原因。 
 
 以上就是使用Cypress实现Vue3 Vite项目自动化UI测试的简单步骤。
