--- a/docs/src/daily/2023-04-20.md
+++ b/docs/src/daily/2023-04-20.md
@@ -6,3 +6,16 @@
 
 ### code whisperer
 [CodeWhisperer是亚马逊出品的一款基于机器学习的通用代码生成器，可实时提供代码建议。在编写代码时，它会自动根据您现有的代码和注释生成建议。](https://blog.csdn.net/chinesehuazhou2/article/details/126903714)[1](https://blog.csdn.net/chinesehuazhou2/article/details/126903714)
+
+### js Map
+
+JavaScript中的Map是一种新的数据结构，它是一组键值对的有序列表，其中每个键唯一且对应一个值。Map对象在JavaScript中被广泛使用，它提供了一种更好的方式来存储和访问数据。Map对象可以使用set()方法添加键值对，使用get()方法获取键对应的值，使用delete()方法删除键值对，使用has()方法检查Map对象中是否存在某个键，使用forEach()方法遍历Map对象中的所有键值对。
+
+### ts除了类型提示还有什么用
+
+TypeScript除了类型提示，还有以下用途：
+1.  TypeScript可以在编译时检查代码错误，从而减少运行时错误。
+2.  TypeScript可以使代码更易于维护和重构。
+3.  TypeScript可以使代码更易于阅读和理解。
+4.  TypeScript可以使代码更易于调试。
+5.  TypeScript可以使代码更易于测试。
