--- a/docs/src/daily/2023-04-24.md
+++ b/docs/src/daily/2023-04-24.md
@@ -24,6 +24,7 @@
 - 开发工具支持：pinia 可以与 Vue devtools 集成，让你在 Vue 2 和 Vue 3 中都能享受到更好的开发体验。
 所以，如果你正在使用 Vue.js 开发一个复杂的应用，并且想要一个轻量、符合直觉、易于组织的状态管理库，那么 pinia 可能是一个不错的选择。
 源: 与必应的对话， 2023/4/24
+
 (1) Pinia | The intuitive store for Vue.js. https://pinia.vuejs.org/ 访问时间 2023/4/24.
 (2) Pinia | The intuitive store for Vue.js. https://pinia.vuejs.org/zh/ 访问时间 2023/4/24.
 (3) Introduction | Pinia - Vue.js. https://pinia.vuejs.org/introduction.html 访问时间 2023/4/24.
@@ -65,6 +66,7 @@ Promise.all([p1, p2, p3]).then(function (values) {console.timeEnd();//3000左右
 
 
 源: 与必应的对话， 2023/4/24
+
 (1) Promise.all等待所有Promise执行完成 - CSDN博客. https://blog.csdn.net/mouday/article/details/106130978 访问时间 2023/4/24.
 (2) Promise.all( ) 的使用 - lcspring - 博客园. https://www.cnblogs.com/lcspring/p/11169295.html 访问时间 2023/4/24.
 (3) Javascript Promise.all()用法及代码示例 - 纯净天空. https://vimsky.com/examples/usage/javascript-promise-all-method.html 访问时间 2023/4/24.
@@ -85,6 +87,7 @@ Promise.all([p1, p2, p3]).then(function (values) {console.timeEnd();//3000左右
 - Promise.reject()：用于创建一个已经失败的 promise 对象，其原因是指定的值。
 
 源: 与必应的对话， 2023/4/24
+
 (1) Promise - JavaScript | MDN - Mozilla Developer. https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise 访问时间 2023/4/24.
 (2) Promise API - JavaScript. https://javascript.info/promise-api 访问时间 2023/4/24.
 (3) Using promises - JavaScript | MDN - Mozilla Developer. https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Using_promises 访问时间 2023/4/24.
@@ -97,27 +100,17 @@ Promise.all([p1, p2, p3]).then(function (values) {console.timeEnd();//3000左右
 下面是一个示例：  
 ```ts
 const promises = [
-
   Promise.resolve('hello'),
-
   Promise.reject(new Error('world')),
-
   Promise.resolve('!'),
-
 ];
 
 Promise.any(promises)
-
   .then((result) => {
-
     console.log(result); // 输出 'hello'
-
   })
-
   .catch((error) => {
-
     console.error(error); // 输出 'AggregateError: All promises were rejected'
-
   });
 
 ```
@@ -136,6 +129,7 @@ Promise.any(promises)
 - V8 引擎还使用了一个叫做垃圾回收器 (**garbage collector**) 的组件，负责管理内存的分配和释放。V8 引擎使用了分代式垃圾回收算法，将内存分为新生代和老生代两部分，分别采用不同的回收策略。新生代内存中存放的是生命周期较短的对象，使用复制算法进行回收。老生代内存中存放的是生命周期较长的对象，使用标记-清除和标记-整理算法进行回收。V8 引擎还使用了增量标记和并发标记等技术，减少垃圾回收对执行的影响。
 
 源: 与必应的对话， 2023/4/24(1) 深入理解 JavaScript 的 V8 引擎
+
 (1) - 知乎 - 知乎专栏. https://zhuanlan.zhihu.com/p/389319890 访问时间 2023/4/24.
 (2) Google V8 引擎工作原理（翻译） - 掘金 - 稀土掘金. https://juejin.cn/post/6844903640616943623 访问时间 2023/4/24.
 (3) V8发动机 - 百度百科. https://baike.baidu.com/item/V8发动机/280551 访问时间 2023/4/24.
@@ -144,5 +138,35 @@ Promise.any(promises)
 
 ast explorer
 
-<iframe src="https://astexplorer.net/" style="width:100%;height:500px"></iframe>
+<iframe src="https://astexplorer.net/" style="width:100%;height:600px"></iframe>
 
+
+你可以这样理解 js 中的解释器和编译器：
+- 解释器 **interpreter** 是一种程序，它可以边读取 js 代码，边翻译成机器可执行的指令，边执行。解释器的优点是可以快速启动和执行代码，缺点是相同的代码可能被重复翻译和执行，效率较低。
+- 编译器 **complier** 是另一种程序，它可以提前将 js 代码翻译成机器可执行的指令，并生成一个可执行文件。编译器的优点是可以避免重复翻译和执行，并且可以在编译过程中对代码进行优化，缺点是需要提前编译，不能动态执行。
+- js 最初是一种解释型语言，但后来为了提高性能，浏览器引入了 JIT（即时编译）技术，它结合了解释器和编译器的优点，可以动态地将热点代码（经常执行的代码）编译成机器指令，并缓存起来，从而提高运行速度。
+
+源: 与必应的对话， 2023/4/24
+
+(1) JavaScript 编译 - JIT (just-in-time) compiler 是怎么工作的 - 知乎. https://zhuanlan.zhihu.com/p/99395691 访问时间 2023/4/24.
+(2) 实现JavaScript语言解释器（一） - 知乎 - 知乎专栏. https://zhuanlan.zhihu.com/p/269798069 访问时间 2023/4/24.
+(3) 编译原理：从0写一个js解释器 - 知乎 - 知乎专栏. https://zhuanlan.zhihu.com/p/137509746 访问时间 2023/4/24.
+
+[状态机和状态图简介 | XState 文档](https://xstate.js.org/docs/zh/guides/introduction-to-state-machines-and-statecharts/#%E5%A4%8D%E5%90%88%E7%8A%B6%E6%80%81-compound-states)
+
+
+### 6.用js实现有限状态机
+
+根据网络搜索结果¹³，你可以这样用 js 实现一个有限状态机：
+
+- 引入一个有限状态机的函数库，如 XState 或 Javascript Finite State Machine。
+- 定义一个有限状态机的配置对象，包括初始状态，可能的状态，以及触发状态转换的事件和回调函数。
+- 使用 createMachine 或 StateMachine.create 方法，根据配置对象创建一个有限状态机的实例。
+- 使用 interpret 或 StateMachine.create 方法，创建一个状态机的服务，用来解释和执行状态机的逻辑。
+- 使用 send 方法，向状态机发送事件，触发状态转换和相应的动作。
+- 使用 current 或 value 属性，获取当前的状态。
+- 
+(1) XState 文档 - js. https://xstate.js.org/docs/zh/ 访问时间 2023/4/24.
+(2) 前端状态机：XState 首个中文文档上线了 - 掘金. https://juejin.cn/post/7041081378745630757 访问时间 2023/4/24.
+(3) JavaScript与有限状态机 - 阮一峰的网络日志 - Ruan YiFeng. https://www.ruanyifeng.com/blog/2013/09/finite-state_machine_for_javascript.html 访问时间 2023/4/24.
+(4) JavaScript中有限状态机的简介 - 掘金 - 稀土掘金. https://juejin.cn/post/7173290115769319461 访问时间 2023/4/24.
