--- a/docs/src/daily/2023-04-26.md
+++ b/docs/src/daily/2023-04-26.md
@@ -8,3 +8,32 @@ IIFE 是立即调用的函数表达式（Immediately Invoked Function Expres
 ```
 在上面的示例中，我们使用 IIFE 创建了一个匿名函数，并立即调用它。该函数的代码将在定义后立即执行。  
 如果您需要更多关于 IIFE 的信息，可以查看 [MDN 文档](https://developer.mozilla.org/en-US/docs/Glossary/IIFE)。
+
+### 服务端渲染
+
+根据您的问题，我理解您想要了解服务端渲染。服务端渲染是一种将网页内容在服务器端生成并发送到浏览器的技术。与传统的客户端渲染不同，服务端渲染可以提高网页的性能和搜索引擎优化。  
+  
+在服务端渲染中，服务器会将网页内容生成为 HTML 字符串，并将其发送到浏览器。浏览器接收到 HTML 字符串后，可以立即显示网页内容，而无需等待 JavaScript 文件的下载和执行。这可以提高网页的加载速度和用户体验。  
+  
+要实现服务端渲染，您可以使用一些流行的框架和库，例如 React、Vue 和 Angular。这些框架和库提供了一些工具和 API，可以帮助您在服务器端生成网页内容，并将其发送到浏览器。  
+  
+以下是一个示例，展示如何使用 Vue.js 实现服务端渲染：  
+```js
+// 此文件运行在 Node.js 服务器上
+import { createSSRApp } from 'vue'
+// Vue 的服务端渲染 API 位于 `vue/server-renderer` 路径下
+import { renderToString } from 'vue/server-renderer'
+
+const app = createSSRApp({
+  data: () => ({ count: 1 }),
+  template: `<button @click="count++">{{ count }}</button>`
+})
+
+renderToString(app).then((html) => {
+  console.log(html)
+})
+
+
+```
+  
+如果您需要更多关于服务端渲染的信息，可以查看 [MDN 文档](https://developer.mozilla.org/en-US/docs/Learn/Toolsandtesting/Client-sideJavaScriptframeworks/Server-siderendering) 和 [Vue.js 文档](https://ssr.vuejs.org/)。
