--- a/docs/src/daily/2023-04-26.md
+++ b/docs/src/daily/2023-04-26.md
@@ -37,3 +37,6 @@ renderToString(app).then((html) => {
 ```
   
 如果您需要更多关于服务端渲染的信息，可以查看 [MDN 文档](https://developer.mozilla.org/en-US/docs/Learn/Toolsandtesting/Client-sideJavaScriptframeworks/Server-siderendering) 和 [Vue.js 文档](https://ssr.vuejs.org/)。
+
+### HSTS
+HTTP Strict Transport Security (HSTS) 是一种网络安全策略机制，有助于保护网站免受协议降级攻击和 cookie 劫持。它允许 Web 服务器声明 Web 浏览器（或其他符合规范的用户代理）只能使用安全的 HTTPS 连接与其交互，而不能通过不安全的 HTTP 协议进行交互。
