--- a/docs/src/daily/2023-04-26.md
+++ b/docs/src/daily/2023-04-26.md
@@ -40,3 +40,9 @@ renderToString(app).then((html) => {
 
 ### HSTS
 HTTP Strict Transport Security (HSTS) 是一种网络安全策略机制，有助于保护网站免受协议降级攻击和 cookie 劫持。它允许 Web 服务器声明 Web 浏览器（或其他符合规范的用户代理）只能使用安全的 HTTPS 连接与其交互，而不能通过不安全的 HTTP 协议进行交互。
+
+###  在 VS Code 中使用堡垒机  
+  
+如果您是想在 VS Code 中使用堡垒机，我不确定您具体指的是哪种堡垒机。一般来说，堡垒机是一种用于管理和保护远程服务器的工具，可以帮助您在远程服务器上执行命令、上传和下载文件等操作，同时保护服务器的安全。  
+  
+在 VS Code 中，您可以使用一些插件来连接和管理远程服务器，例如 Remote-SSH 插件。该插件允许您通过 SSH 连接到远程服务器，并在 VS Code 中执行命令、编辑文件等操作。您可以在 VS Code 的扩展商店中搜索并安装 Remote-SSH 插件。
